# rusty-mancala

./: .travis.yml  LICENSE  README.md
mancala/: Cargo.toml
mancala/client/: Cargo.toml
mancala/client/examples/: sample_client.rs
mancala/client/src/: lib.rs
mancala/client/src/lib/: lib.rs
mancala/protocol/: Cargo.toml
mancala/protocol/src/: lib.rs
mancala/server/: Cargo.toml
mancala/server/examples/: sample_server.rs
mancala/server/src/: lib.rs
mancala/server/src/lib/: lib.rs
mancala/src/: game_objects.rs
