[package]
name = "mancala"
version = "0.1.0"
authors = ["rooneyshuman <rooneyshuman@gmail.com>", "loganballard <lballard@pdx.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
path = "./src/game_objects.rs"